# hello-wasm2

./: Cargo.toml
pkg/: README.md  hello_wasm.d.ts  hello_wasm.js  hello_wasm2.js  hello_wasm_bg.d.ts  hello_wasm_bg.wasm  package.json
site/: index.js  webpack.config.js
src/: lib.rs  shapes.rs  wasm.rs
