[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["聂小涛 <niexiaotao@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lazy_static = "1.4.0"
serde = "1.0.102"
serde_json = "1.0.41"

[dependencies.web-sys]
version = "0.3.31"
features = [
  "console",
  "Window",
  "MouseEvent",
  "Element",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  'CssStyleDeclaration',
  'EventTarget',
  'HtmlCanvasElement',
  'OffscreenCanvas',
  'HtmlElement',
  'MouseEvent',
  'Node'
]